hiskio_redis-master.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  labels:
    app: redis
    role: master
    tier: backend
spec:
  ports:
    # the port that this service should serve on
  - port: 6379
    targetPort: 6379 #-->對應Pod中的Container port，與port相同可省略
  selector: #-->將traffic導到那些Pod
    app: redis
    role: master
    tier: backend
